Improve README (#23)
* Improve readme

* Improve readme

Co-authored-by: Cies Stager <cies-at@stager-dot.nl>