@@ -7,9 +7,11 @@
 
 RePlay is a fork of the [Play1](https://github.com/playframework/play1) framework, made and maintained by [Codeborne](https://codeborne.com).
 The fork was needed to make some breaking changes that would otherwise not be possible.
-RePlay originally forked Play 1.5.0 but regularly pulls in improvements made to Play1 to RePlay (when applicable).
 
-#### Advantages of RePlay over Play1:
+RePlay originally forked Play 1.5.0, we regularly pull in applicable improvements made in the Play1 project.
+
+
+#### Advantages of RePlay over Play1
 
 * Uses the [Gradle build tool](https://gradle.org/) for dependency management and builds (no vendor code in your project's version control).
 * Removes most of built-in Play modules (console, docviewer, grizzly, secure, testrunner) that we actually didn't use.
@@ -24,19 +26,64 @@ RePlay originally forked Play 1.5.0 but regularly pulls in improvements made to 
 
 ## Getting started
 
-**TODO:** Instructions on how to get a RePlay project started from scratch. How to get some "auto-compile on save" developer workflow going. Maybe a reference to an example project is enough (the projects in `replay-tests` do not count as they do not contain a developer workflow and dont work stand-alone).
+Unlike with Play1, RePlay does not make use of the `play` command line tool.
+
+This also means there is no `play new` scaffolding available. It is advised to simply start with RePlay's [up-to-date demo application](https://github.com/asolntsev/criminals), and work from there.
+The projects in `replay-tests` may also give some idea of how to set up certain features (like the use of Kotlin).
+
+
+## Development flow (auto-compilation and hot-swapping)
+
+Since RePlay does not use the `play` CLI command, we cannot use that method to start the application in development mode (i.e.: with `play run`).
+
+To get your changes automatically compiled and hot-swapped into a running application you need to set up your IDE to take care of it.
+
+Here we describe how to do that with IntelliJ IDEA:
+
+1. Open the criminals project (not "import") by selecting the root of this project's repository
+2. Go to `Run -> Edit Configurations...`, click the `+` (Add New Configuration) in the top-right corner and select "Application"
+3. Fill in the following details, and click `OK`:
+  * Name: *put the name of your application here*
+  * Main class: `appname.Application` (replace `appname` with the package name that matches your application name in `app/`)
+  * Use classpath of module: `appname.main`
+  * JRE: select one your prefer, e.g. `11`
+
+Now a run configuration with the name of your app shows up in the top-right of the screen.
+You can press the "Run" button (with the green play icon) to start the application.
+
+Code changes are automatically compiles and hot-swapped into the running application. In many cases it works immediately (until you change signatures of some methods).  
+You do not even need to save the file you are working on: simply reload the page in your browser to see the changes in effect.
+
+If hot-swapping failed, you will see a notification in IDEA after which you need to restart the application.  
 
 
 ## Deploying
 
-**TODO:** How to run a RePlay app in production mode?
+As a result of `./gradlew jar` you will have the JAR file `build/libs/appname.jar`.
+
+The following should start your application from the command line:
+
+    java -cp "build/lib/*:build/libs/*:build/classes/java/main" appname.Application
+
+The classpath string (after `-cp`) contains three parts. The first bit (`build/lib/*`) points to the dependencies of the project as installed by Gradle.
+The second bit (`build/libs/*`) points the application JAR file as build Gradle.
+The last bit points to the folder with the application's `.class` files (`build/classes/java/main`) built by the Gradle build script, as that's what RePlay (and Play1 as well) use instead of the versions of these files found in the application's JAR file.
+
+
+## Troubleshooting
+
+You may find some `WARNING` blocks in the logs when running the application. These are safe to ignore, below some further explanation on what causes then and how to possibly fix them.
+
+Add this flag `--add-opens java.base/java.lang=ALL-UNNAMED` to reduce "illegal reflective access" warnings from `guice` (this will be fixed in a future version of `guice`).
+
+The "illegal reflective access" warnings from `netty` are harder to fix: RePlay should upgrade it's `netty` dependency from `3.10.6.Final` to `io.netty:netty-all:4.1.43.Final` or greater.
 
 
 ## Porting a Play1 codebase over to RePlay
 
 Move your dependencies over from `dependencies.yml` to `build.gradle`.
 
-Make controllers methods (actions) non-static.
+Make controllers methods (actions) non-static, and subclass from `RebelController`.
 
 Since `play.result.Result` no longer extends `Exception`, your controllers should return `Result` instead of throwing it.
 
@@ -53,5 +100,4 @@ API docs for the RePlay `framework` package are generated with `./gradlew :frame
 RePlay framework is distributed under [MIT license](https://github.com/codeborne/replay/blob/master/LICENSE).
 
 The original Play1 framework is distributed under [Apache 2 licence](http://www.apache.org/licenses/LICENSE-2.0.html).
-
 
